# sgan

./: .gitignore  README.md  TRAINING.md  pyproject.toml  requirements.txt
scripts/: evaluate_model.py  train.py
sgan/: __init__.py  losses.py  models.py  utils.py
sgan/data/: loader.py  trajectories.py
