[project]
name = "sgan"
version = "0.1.0"
description = "Social GAN (CVPR 2018) on PyTorch 2.x"
requires-python = ">=3.9"
dependencies = [
    "attrdict>=2.0.1",
    "numpy>=1.24",
    "pillow>=9",
    "six>=1.16",
    "torch>=2.3,<2.5",
    "torchvision>=0.18,<0.19",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sgan*"]
